# mpp_osc_kpa_dialog

./: .gitignore  DialogGraphWidget.ui  README.md  WidgetGraph.ui  WidgetRunMeasure.ui  crc16.py  ddii_command.py  env_var.py  graph_widget.py  log_config.py  main.py  main.ui  main_graph_widget.py  plot_renderer.py  pyproject.toml  run_meas_widget.py  tabWidget_maker.py
modules/: graph_widget.py
mpp_osc_kpa_dialog/: __init__.py  main.py  main.ui
mpp_osc_kpa_dialog/modules/: graph_widget.py  measure_widget.py  measure_widget.ui  run_meas_widget.py  run_meas_widget_bdk2.ui
mpp_osc_kpa_dialog/util/: async_task_manager.py  command_interface.py  env_var.py  filters_data.py  main_window_maker.py  parsers.py  plot_renderer.py  tabwidget_maker.py
util/: env_var.py  modbus_worker.py
