[project]
name = "mpp-osc-kpa-dialog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "crcmod>=1.7",
    "loguru>=0.7.3",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pyqt6>=6.10.2",
    "pyqtgraph>=0.14.0",
    "qasync>=0.28.0",
    "qtmodern>=0.2.0",
    "qtpy>=2.4.3",
]

[tool.setuptools.package-data]
"*" = ["*.ui", "*.svg", "*.ico", "*.png", "*.qss"]

